youfull/objects/Business_Plan__c.object
<CustomObject>
    <fields>
        <fullName>NEXT_3_CMPGN_NR__c</fullName>
        <label>Creation campaign + 3</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NEXT_3_SPPY_CMPGN_NR__c</fullName>
        <label>SPPY campaign + 3</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PREV_1_CMPGN_NR__c</fullName>
        <label>Prior campaign</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PREV_AVG_DISCNT_PCT__c</fullName>
        <label>Average Discount Rate [%]-Prev Campaign</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PREV_AVG_GENRTN_1_DISTR_SLS_PCT__c</fullName>
        <label>G1 Average Sales Distribution [%] Prev C</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PREV_AVG_GENRTN_1_UNIT_COMM_PCT__c</fullName>
        <label>G1 Average Unit Commission Rates[%] Prev</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PREV_AVG_GENRTN_2_DISTR_SLS_PCT__c</fullName>
        <label>G2 Average Sales Distribution [%] Prev</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PREV_AVG_GENRTN_2_UNIT_COMM_PCT__c</fullName>
        <label>G2 Average Unit Commission Rates[%] Prev</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PREV_AVG_GENRTN_3_DISTR_SLS_PCT__c</fullName>
        <label>G3 Average Sales Distribution [%] Prev</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PREV_AVG_GENRTN_3_UNIT_COMM_PCT__c</fullName>
        <label>G3 Average Unit Commission Rates[%] Prev</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PREV_EXEC_ERNGS_AMT__c</fullName>
        <label>Executive Earning-Previous Campign</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PREV_GENRTN_1_STF_CNT__c</fullName>
        <label>G1 Staff count - Previous campaign</label>
        <precision>13</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PREV_GENRTN_1_TITL_STF_CNT__c</fullName>
        <label>G1 Sales Leaders(UL+) - Previous Campaig</label>
        <precision>13</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PREV_GENTRTN_1_ACTV_REP_CNT__c</fullName>
        <label>G1 Active Rep-Previous Campaign</label>
        <precision>13</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PREV_GRP_UNIT_SLS_AMT__c</fullName>
        <label>TUS Previous Campaign</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PREV_PRSNL_SLS_AMT__c</fullName>
        <label>Previous Camp Personal Sales</label>
        <precision>15</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PRSNL_DEV_PLN_ACTN1__c</fullName>
        <label>Personal Development Plan - Action 1</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PRSNL_DEV_PLN_ACTN2__c</fullName>
        <label>Personal Development Plan - Action 2</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PRSNL_DEV_PLN_ACTN3__c</fullName>
        <label>Personal Development Plan - Action 3</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PRSNL_DEV_PLN_PLN1__c</fullName>
        <label>Personal Development Plan - Plan 1</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PRSNL_DEV_PLN_PLN2__c</fullName>
        <label>Personal Development Plan - Plan 2</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PRSNL_DEV_PLN_PLN3__c</fullName>
        <label>Personal Development Plan - Plan 3</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PRSNL_DSCNT_AMT__c</fullName>
        <formula>PRSNL_SLS_AMT__c* 
IF(PREV_AVG_DISCNT_PCT__c&gt;0,PREV_AVG_DISCNT_PCT__c/100,
     IF( Business_Plan_Parameter__r.AVG_DISCNT_PCT__c&gt;0, Business_Plan_Parameter__r.AVG_DISCNT_PCT__c/100,0)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Earnings frm Prsnl Sales curr campaign</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>PRSNL_SLS_AMT__c</fullName>
        <label>Personal volume - Current Campaign</label>
        <precision>13</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Personal_Achievement__c</fullName>
        <label>Personal Achievement</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Plan_Status__c</fullName>
        <label>Plan Status</label>
        <picklist>
            <picklistValues>
                <fullName>In Progress</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deleted</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Previous_Avg_Activity_Rate__c</fullName>
        <label>Previous Avg Activity Rate</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>RECR_ACTN1__c</fullName>
        <label>Recruiting - Action 1</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>RECR_ACTN2__c</fullName>
        <label>Recruiting - Action 2</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>RECR_ACTN3__c</fullName>
        <label>Recruiting - Action 3</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>RSNG_STR_DEV_ACTN1__c</fullName>
        <label>Rising Stars Development - Action 1</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>RSNG_STR_DEV_ACTN2__c</fullName>
        <label>Rising Stars Development - Action 2</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>RSNG_STR_DEV_ACTN3__c</fullName>
        <label>Rising Stars Development - Action 3</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>RSNG_STR_DEV_CND__c</fullName>
        <label>Rising Stars Candidates</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SPPY_CMPGN_NR__c</fullName>
        <label>Same Period Prior Year Campaign Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SPPY_TOTAL_ESTMTD_ERNGS__c</fullName>
        <label>Total Earnings(Prior Yr)-Curr campaign</label>
        <precision>13</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Short_Term_Goals__c</fullName>
        <label>Short Term Goals</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>StaffCount3__c</fullName>
        <label>StaffCount3</label>
        <precision>13</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TOP_SLR_ACTN1__c</fullName>
        <label>Top Seller Title Advancement - Action 1</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>TOP_SLR_ACTN2__c</fullName>
        <label>Top Seller Title Advancement - Action 2</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>TOP_SLR_ACTN3__c</fullName>
        <label>Top Seller Title Advancement - Action 3</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>TOP_SLR_CND__c</fullName>
        <label>Top Seller Candidates</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>TOTAL_ESTMTD_ERNGS__c</fullName>
        <formula>PRSNL_DSCNT_AMT__c + LDR_ERNGS_AMT__c + BONUS_ERNGS_AMT__c + EXEC_ERNGS_AMT__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total &amp; Estimated Earnings Current Camp</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Title_Nr__c</fullName>
        <label>Title_Nr</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TotalUnitSalesCC_1__c</fullName>
        <label>TotalUnitSalesCC+1</label>
        <precision>13</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TotalUnitSalesCC_2__c</fullName>
        <label>TotalUnitSalesCC+2</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Unit_Achievement__c</fullName>
        <label>Unit Achievement</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Unit_Earning_Multiplier__c</fullName>
        <label>Unit Earning Multiplier</label>
        <precision>17</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Business_Plans1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>VAR_BONUS_ERNGS_AMT__c</fullName>
        <label>Bonus Earnings Variance</label>
        <precision>13</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>VAR_EXEC_ERNGS_AMT__c</fullName>
        <label>Executive Earnings Variance</label>
        <precision>13</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>VAR_GENRTN_1_ACT_PCT__c</fullName>
        <description>Variance of closed campaigns</description>
        <label>G1 Activity Rate Variance</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>VAR_GENRTN_1_APPT_CNT__c</fullName>
        <label>Personal Appoitments Variance</label>
        <precision>13</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>VAR_GENRTN_1_QPA_CNT__c</fullName>
        <label>Qualified Personal Appoitments Var</label>
        <precision>13</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>VAR_GENRTN_1_RMVL_CNT__c</fullName>
        <label>G1 Removals Variance</label>
        <precision>13</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>VAR_GENRTN_1_STF_CNT__c</fullName>
        <label>G1 Staff count Variance</label>
        <precision>13</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>VAR_GENRTN_1_TITL_1_STF_CNT__c</fullName>
        <label>New Gen 1 Title 1 Leader Cnt(UL) Var</label>
        <precision>13</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>VAR_GENRTN_1_TITL_2_STF_CNT__c</fullName>
        <label>New Gen1 Titl2 Ledr Cnt(AUL) Var</label>
        <precision>13</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>VAR_GENRTN_1_TITL_3_STF_CNT__c</fullName>
        <label>New Gen 1 Title 3 Leader Count(EUL) Var</label>
        <precision>13</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>VAR_GENRTN_1_TITL_STF_CNT__c</fullName>
        <label>G1 Sales Leaders (UL+) Variance</label>
        <precision>13</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>VAR_GENTRTN_1_ACTV_REP_CNT__c</fullName>
        <label>G1 Active Reps Variance</label>
        <precision>13</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>VAR_GRP_UNIT_SLS__c</fullName>
        <label>TUS Variance</label>
        <precision>13</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>VAR_LDR_ERNGS_AMT__c</fullName>
        <label>Unit Earnings Variance</label>
        <precision>13</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>VAR_PRSNL_DSCNT_AMT__c</fullName>
        <label>Earnings from Personal Sales Variance</label>
        <precision>13</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>VAR_PRSNL_SLS_AMT__c</fullName>
        <label>Personal volume Variance</label>
        <precision>13</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>VAR_TOTAL_ESTMTD_ERNGS__c</fullName>
        <label>Total Estimated Earnings Variance</label>
        <precision>13</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Business Plan</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Market_Id__c</columns>
        <columns>NAME</columns>
        <columns>Acct_Nr__c</columns>
        <columns>IsDeleted__c</columns>
        <columns>Is_BP_Saved__c</columns>
        <columns>User__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <columns>OWNER.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>PH</fullName>
        <columns>NAME</columns>
        <columns>Acct_Nr__c</columns>
        <columns>IsDeleted__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Acct_Nr__c</field>
            <operation>equals</operation>
            <value>0037000358879</value>
        </filters>
        <label>PH</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>BP-{0000000}</displayFormat>
        <label>Business Plan Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Business Plans</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>